<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.scank.organizer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.scank.organizer.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_guestlist"
        android:name="com.scank.organizer.ui.guestlist.GuestListFragment"
        android:label="@string/title_guestlist"
        tools:layout="@layout/fragment_guestlist" />

    <fragment
        android:id="@+id/navigation_manage"
        android:name="com.scank.organizer.ui.manage.ManageFragment"
        android:label="@string/title_manage"
        tools:layout="@layout/fragment_manage" />
</navigation>