<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ivBackForgot"
        android:layout_width="@dimen/dim_24"
        android:layout_height="@dimen/dim_24"
        android:padding="8dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dim_16"
        android:layout_marginEnd="@dimen/dim_16"
        android:background="@drawable/ic_close_red"
        android:backgroundTint="@color/grey"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_80">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView8"
                    android:layout_width="80dp"
                    android:layout_height="62dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/splash_icon" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lr_log_edittes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_120"
                android:layout_marginLeft="@dimen/dim_32"
                android:layout_marginRight="@dimen/dim_32"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/email"
                        android:textAlignment="center"
                        android:textColor="#8B8B8B"
                        android:textSize="@dimen/ts14sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtForgotEmail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="@dimen/dim_20"
                        android:background="@drawable/bg_rounded_rect_transparent"
                        android:ems="10"
                        android:hint="@string/enter_email"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="textEmailAddress"
                        android:textAlignment="center"
                        android:textColor="#353B48"
                        android:textSize="@dimen/ts14sp" />
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_32"
                android:layout_marginTop="@dimen/dim_16"
                android:layout_marginRight="@dimen/dim_32"
                android:background="@drawable/bg_rounded_rect_red"
                android:fontFamily="@font/avenir_heavy"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textSize="@dimen/ts14sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>